# audiate

./: Cargo.toml  README.md
src/: chord.rs  lib.rs  main.rs  note.rs
src/chord/: chord.rs  mod.rs
src/note/: interval.rs  mod.rs  name.rs  note.rs  pitch_variant.rs  util.rs
src/scale/: kind.rs  mod.rs  scale.rs
tests/: note_tests.rs  scale_tests.rs
