[package]
name = "rust-arpeggiator"
version = "0.1.0"
authors = ["Tyler Earls <tyler.a.earls@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
lazy_static = "1.4.0"

[dev-dependencies]
cargo-husky = "1.5.0"